# SENKRON_DEVIN

./: .coverage  .gitignore  =4.1.5  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/modules/: ai_learner.py  ephemeris_engine.py  financial_predictor.py  historical_event_importer.py  prediction_backtester.py  quantum_predictor.py  sentiment_collector.py  timeline_engine.py  unified_predictor.py
data/: historical_events.csv
tests/: __init__.py  test_api_endpoints.py  test_ephemeris_engine.py  test_importer_flexible_csv.py  test_quantum_predictor.py  test_timeline_engine.py  test_unified_predictor.py  test_version.py
tests/data/: test_bom.csv  test_invalid_dates.csv  test_minimal.csv  test_missing_columns.csv  test_weight_clamping.csv
