[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "senkron"
version = "0.3.0"
description = "SENKRON - AI-powered prediction and analysis engine"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# Python sürümü hedefi
target-version = "py38"

# Kod satır uzunluğu
line-length = 88

# Kontrol edilecek dosya türleri
extend-include = ["*.ipynb"]

[tool.ruff.lint]
# Aktif kurallar
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# Göz ardı edilecek kurallar
ignore = [
    "E501",  # line too long (ruff formatter ile çözülür)
    "B008",  # do not perform function calls in argument defaults
]

# Dosya başına maksimum hata sayısı
per-file-ignores = {}

[tool.ruff.format]
# Tırnak stili
quote-style = "double"

# Satır sonu stili
indent-style = "space"

# Docstring formatı
docstring-code-format = true

[tool.pytest.ini_options]
# Test dizinleri
testpaths = ["tests"]

# Minimum Python sürümü
minversion = "7.0"

# Test keşif desenleri
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Asyncio modu
asyncio_mode = "auto"

# Coverage ayarları
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]

# Test işaretleri
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]